skoleni.sika/kubernetes/kubernetes-training/01_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-hello-world
  labels:
    app: simple-hello-world
    svc: example
spec:
  containers:
    - name: simple-hello-world
      # (tc) musi to byt v docker registry neumi to z localu
      # - https://github.com/ondrejsika/docker-training#own-docker-registry
      image: ondrejsika/go-hello-world:2
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: 10Mi
          cpu: 10m
        limits:
          memory: 20Mi
          cpu: 20m
