skoleni.sika/kubernetes/kubernetes-training/02_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
  labels:
    app: multi-container-pod
    svc: example
spec:
  volumes:
    - name: html
      emptyDir: {}
  # (tc) priklad s vice kontejnerech v jednom POD
  # aplikace musi umet logovat do stdout, hot-reload cfg, tzn. automaticke nacteni
  # zmen v konfiguracich - pak se nemusi delat vice containers v POD!!!
  #
  # 1:1 dovoluje skalovat kazdy POD/aplikaci zvlast, napr. v diskuzi padlo
  # webserver+redis na jednom POD, ale Ondra to nedoporucuje - nelze 
  # skalovat zvlast - jina metrika pro webserver a jina pro redis
  #--
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      resources:
        requests:
          memory: 20Mi
          cpu: 30m
        limits:
          memory: 50Mi
          cpu: 30m
    - name: date
      image: debian
      volumeMounts:
        - name: html
          mountPath: /html
      command: ["/bin/sh", "-c"]
      args:
        - while true; do
          date > /html/index.html.tmp;
          mv /html/index.html.tmp /html/index.html;
          sleep 1;
          done
      resources:
        requests:
          memory: 15Mi
          cpu: 10m
        limits:
          memory: 15Mi
          cpu: 10m
