skoleni.sika/kubernetes/kubernetes-training/04_02_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world-deploy
  annotations:
    # popisek, konkretniho release
    # je moznost pridat metadata informace
    kubernetes.io/change-cause: ver2
spec:
  # drzi to 3 replika sety zpetne
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-world-deploy
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-world-deploy
        svc: example
    spec:
      containers:
        - name: hello-world
          # lisi se od 04_01_deployment jenom versi image
          image: ondrejsika/go-hello-world:2
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
