skoleni.sika/kubernetes/kubernetes-training/13_secret_example.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: secret-example
spec:
  containers:
    - name: www
      image: ondrejsika/www
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: secret
          mountPath: /www/password.txt
          subPath: password
        - name: secret
          mountPath: /www/tokenFromString.txt
          subPath: tokenFromString
        - name: config
          mountPath: /www/config.txt
          subPath: config
        - name: config
          mountPath: /www/hello.html
          subPath: hello.html
        - name: config
          mountPath: /www/configmap
      resources:
        requests:
          memory: 10Mi
          cpu: 10m
        limits:
          memory: 20Mi
          cpu: 20m
  volumes:
    - name: config
      configMap:
        name: my-config
    - name: secret
      secret:
        secretName: my-secret
