skoleni.sika/kubernetes/kubernetes-training/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    # (tc) jsou to label, viz. 01/02 _pod.yml, metadata/labels/svc
    # v praxi chceme, aby ukazovala na jednu skupinu POD
    #   - ne s ruznymi aplikacemi
    #   - aka LoadBalancer ke konkretnim NODE (LB na posledni urovni)
    #   - v praxi se dela jedna Service na jeden Pod
    # Viditelnost, jsou to prvky
    #   - endpointy, na kt. se da nahlize zvenku 
    #   - endpointy, kt. na sebe vidi navzajem v cluster-u
    # svc: hodnota --- toto pak uvadis v:
    #   - pod-ech 2
    #   - v nebo v deployment/template/metadata/labels
    svc: example
