skoleni.sika/kubernetes/kubernetes-training/strategy_ramped.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ramped
  annotations:
    kubernetes.io/change-cause: ver1
spec:
  selector:
    matchLabels:
      app: ramped
  replicas: 20
  strategy:
    # postupne nasazovani s moznosti konfigurace viz. rollingUpdate/max* atributy
    # vhodne pri nasazovani versi, kt. mohou bezet zaroven - nevadi si
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ramped
    spec:
      containers:
        - name: hello-world
          image: ondrejsika/go-hello-world:1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
---
apiVersion: v1
kind: Service
metadata:
  name: ramped
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: ramped
