skoleni.sika/kubernetes/kubernetes-training/strategy_recreate.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recreate
  annotations:
    kubernetes.io/change-cause: ver1
spec:
  selector:
    matchLabels:
      app: recreate
  replicas: 10
  strategy:
    # vypne to najednou a pak to spusti najednou
    # vhodne pri nasazovani, kdyz nasazuji verse, kt. KOLIDUJI
    # tzn. stara/stavajici nelze spustit s novou/prave nasazovanou
    type: Recreate
  template:
    metadata:
      labels:
        app: recreate
    spec:
      containers:
        - name: hello-world
          image: ondrejsika/go-hello-world:1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
---
apiVersion: v1
kind: Service
metadata:
  name: recreate
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: recreate
