skoleni.sika/kubernetes/kubernetes-training/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers
spec:
  rules:
    # neresi loadbalancing, routing z dns dovnitr na K8/Service
    # nastaveni dns, kt. funguje
    #- host: nginx.192.168.99.100.nip.io
    - host: 127.0.0.1
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    # neresi loadbalancing, routing z dns dovnitr na K8/Service
    # nastaveni dns, kt. funguje
    #- host: apache.192.168.99.100.nip.io
    - host: 127.0.0.2
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
